fix(room-filter-page): resolve form footer z-index
#10

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,7 +7,7 @@
 .header {
   $blockClass: &;
   position: relative;
-  z-index: 3;
+  z-index: 11;
   font-size: 0.875rem;
   color: $color-primary-50;
   background: white;
